<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sistem Pakar Stres Kerja</string>
    <string name="app_name_full">Sistem Pakar Diagnosa\nStres Kerja Karyawan</string>
    <string name="username">Username</string>
    <string name="nik">Nomor Induk Karyawan</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="diagnosa_penyakit">Diagnosa Penyakit</string>
    <string name="riwayat_diagnosa">Riwayat Diagnosa</string>
    <string name="daftar_penyakit">Daftar Diagnosa</string>
    <string name="daftar_pengguna">Data Pengguna</string>
    <string name="getstarted">Ayo Cek Tingkat Stres Kamu</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="metode_forward_chaining">Metode Forward Chaining</string>
    <string name="metode_certainty_factor">Metode Certainty Factor</string>
    <string name="diagnosa_cepat">Diagnosa Cepat</string>
    <string name="diagnosa_akurat">Mulai Diagnosa </string>
    <string name="data_penyakit">Data Diagnosa</string>
    <string name="data_aturan">Data Aturan</string>
    <string name="kode_gejala">Kode Gejala</string>
    <string name="nama_gejala">Nama Gejala</string>
    <string name="simpan">Simpan</string>
    <string name="nilai_cf">Nilai CF</string>
    <string name="hapus_gejala">Hapus Gejala</string>
    <string name="kode_penyakit">Kode Diagnosa</string>
    <string name="nama_penyakit">Nama Diagnosa :</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="solusi">Solusi</string>
    <string name="gejala">Gejala :</string>
    <string name="tidak_ada_gejala">Tidak ada gejala</string>
    <string name="atur_ulang_gejala">Atur Ulang Gejala</string>
    <string name="ya">Ya</string>
    <string name="tidak_ada_riwayat_diagnosa">Tidak ada riwayat diagnosa</string>
    <string name="text_hasil_diagnosa_nama_penyakit">Berdasarkan gejala terpilih, kemungkinan anda mengalami</string>
    <string name="forward_chaining">Forward Chaining</string>
    <string name="lanjut">Lanjut</string>
    <string name="id_pengguna">ID Pengguna</string>
    <string name="my_dashboard">Dashboard</string>
    <string name="my_dashboard_user">User Dashboard</string>
    <string name="my_dashboard_admin">Admin Dashboard</string>
    <string name="menu_utama">Menu Utama</string>
    <string name="hello_admin">Pengaturan Sistem Pakar</string>
    <string name="data_gejala">Data Gejala</string>
    <string name="aturan">Aturan</string>
    <string name="certainly_factor">Certainly Factor</string>
    <string name="selamat_datang_user">Yuk Cek Tingkat Stres Kamu Disini</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
    <string name="penyakit">Diagnosa</string>
    <string name="penyakit_nama">Nama Diagnosa</string>
    <string name="logout">Logout</string>
    <string name="panduan_admin">Panduan Aplikasi</string>
    <string name="informasi_user">Panduan User</string>
    <string name="informasi_admin">Info Admin</string>
    <string name="Dashboard">Kembali ke Dashboard</string>
    <string name="lihat_hasil_lainnya">Diagnosa Pembanding</string>
    <string name="riwayat">Data Riwayat</string>
    <string name="gejala_terpilih">Gejala Yang dipilih</string>
    <string-array name="gejala_options">
        <item>Pasti (1)</item>
        <item>Hampir Pasti (0.8)</item>
        <item>Kemungkinan Besar (0.6)</item>
        <item>Mungkin (0.4)</item>
        <item>Tidak Tahu (0.2)</item>
        <item>Mungkin Tidak (-0.4)</item>
        <item>Kemungkinan Besar Tidak (-0.6)</item>
        <item>Hampir Pasti Tidak (-0.8)</item>
        <item>Pasti Tidak (-1)</item>
    </string-array>
    <string name="pasti_tidak">Pasti Tidak</string>
    <string name="hampir_pasti_tidak">Hampir Pasti Tidak</string>
    <string name="kemungkinan_besar_tidak">Kemungkinan Besar Tidak</string>
    <string name="mungkin_tidak">Mungkin Tidak</string>
    <string name="tidak_tahu">Tidak Tahu</string>
    <string name="mungkin">Mungkin</string>
    <string name="kemungkinan_besar">Kemungkinan Besar</string>
    <string name="hampir_pasti">Hampir Pasti</string>
    <string name="pasti">Pasti</string>
    <string name="tidak">tidak</string>
    <string name="hint">Jawab</string>
</resources>