<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/kode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mmedium"
        android:gravity="start"
        android:text="@string/kode_gejala"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_pertanyaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mregular"
        android:textColor="@color/black"
        android:gravity="start"
        android:text="@string/nama_gejala"
        android:textSize="17sp"
        android:layout_marginBottom="14dp"
        android:lineSpacingExtra="6dp"
        android:textAppearance="?attr/textAppearanceSubtitle1" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:textAppearance="?attr/textAppearanceSubtitle1">
        <AutoCompleteTextView
            android:id="@+id/spinner_gejala"
            android:fontFamily="@font/mregular"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textAppearance="?attr/textAppearanceSubtitle1"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>