<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:background="@drawable/bg_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/mregular"
        android:text="@string/my_dashboard_admin"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="161dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/facecarewhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mregular"
            android:text="@string/menu_utama"
            android:textColor="@color/blackPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/mlight"
            android:text="@string/hello_admin"
            android:textColor="@color/grayPrimary"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#EDEDED" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_gejala"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:drawableLeft="@drawable/ic_gejala"
                    android:gravity="center"
                    android:background="@drawable/bg_btn_white_primary"
                    android:layout_margin="7dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/data_gejala"
                    android:textAlignment="center"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_penyakit"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:drawableLeft="@drawable/ic_cp"
                    android:background="@drawable/bg_btn_white_primary"
                    android:layout_margin="7dp"
                    android:gravity="center"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/data_penyakit"
                    android:textAlignment="center"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_aturan"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:drawableLeft="@drawable/ic_aturan"
                    android:background="@drawable/bg_btn_white_primary"
                    android:layout_margin="7dp"
                    android:gravity="center"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/data_aturan"
                    android:textAlignment="center"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_riwayat"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="7dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:gravity="center|center_vertical"
                    android:background="@drawable/bg_btn_white_primary"
                    android:drawableLeft="@drawable/ic_rw"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/riwayat"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_data_pengguna"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:background="@drawable/bg_btn_white_primary"
                    android:layout_margin="7dp"
                    android:drawableLeft="@drawable/ic_datauser"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/daftar_pengguna"
                    android:textAlignment="center"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_panduan"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:drawableLeft="@drawable/ic_informasi"
                    android:fontFamily="@font/mmedium"
                    android:background="@drawable/bg_btn_white_primary"
                    android:layout_margin="7dp"
                    android:text="@string/informasi_admin"
                    android:textAlignment="center"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/white" />

                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:paddingRight="40dp"
                    android:drawableLeft="@drawable/ic_logout"
                    android:fontFamily="@font/mmedium"
                    android:background="@drawable/bg_btn_white_primary"
                    android:layout_margin="7dp"
                    android:text="@string/logout"
                    android:textAlignment="center"
                    android:textColor="@color/blackPrimary"
                    android:textAppearance="?android:textAppearanceMedium"
                    app:backgroundTint="@color/design_default_color_background" />



            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:orientation="horizontal">-->

<!--            </LinearLayout>-->

        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
