<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bbackground">

    <View
        android:id="@id/view"
        android:layout_width="match_parent"
        android:layout_height="233dp"
        android:background="@drawable/bg_purple" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="832dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:gravity="center|top"
            android:orientation="vertical"
            android:paddingTop="13dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nama_penyakit"
                android:fontFamily="@font/mregular"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/tv_nama_penyakit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="@font/mmedium"
                android:text="@string/nama_penyakit"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/gejala"
                android:fontFamily="@font/mregular"
                android:textColor="@color/black"
                android:textAppearance="?android:textAppearanceMedium"/>

            <ListView
                android:id="@+id/lv_gejala"
                android:layout_width="match_parent"
                android:layout_height="670dp"
                android:layout_margin="5dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="20dp"
                android:background="@drawable/bg_btn_blue_primary"
                android:fontFamily="@font/mmedium"
                android:text="@string/simpan"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:backgroundTint="@color/bluePrimary" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
